--- a/web_sakurafari/templates/about-us.html
+++ b/web_sakurafari/templates/about-us.html
@@ -64,9 +64,9 @@
                             Blog
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-                                <li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
+                                <li class="nav-item"><a class="nav-link" href="{% url 'blog' %}">Blog</a></li>
+                                <li class="nav-item"><a class="nav-link" href="{% url 'single_blog' %}">Blog Details</a></li>
+                                <li class="nav-item"><a class="nav-link" href="{% url 'elements' %}">Elements</a></li>
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact</a></li>
