--- a/web_sakurafari/templates/about-us.html
+++ b/web_sakurafari/templates/about-us.html
@@ -13,6 +13,7 @@
         <style>
             .justified-text {
                 text-align: justify;
+                font-size: 20px;
                 
             }
         </style>
@@ -98,7 +99,7 @@
                                 <h2>Innovation Without Borders, Growth Without Limits</h2>
                             </div>
                             <div class="justified-text">
-                                <p>Founded in September 2024 and headquartered in Yaoundé, Cameroon, SAKURAFARI SARL envisions becoming the premier gateway for any cutting-edge Japanese technologies into the Central African market, with Cameroon as the pivotal entry point. Our mission is to identify, adapt, and integrate innovative solutions from diverse sectors in Japan that promise transformative impact and sustainable growth for the region. At SAKURAFARI, we are committed to bridging the gap between Japan’s technological excellence and Central Africa’s growing potential, fostering a future of progress and collaboration. </p>
+                                <p>Founded in September 2024 in Cameroon, 2025 in Japan and headquartered in Yaoundé-Cameroon, Nishinomiya-Japan, SAKURAFARI envisions becoming the premier gateway for any cutting-edge Japanese technologies into the Central African market, with Cameroon as the pivotal entry point. Our mission is to identify, adapt, and integrate innovative solutions from diverse sectors in Japan that promise transformative impact and sustainable growth for the region. At SAKURAFARI, we are committed to bridging the gap between Japan’s technological excellence and Central Africa’s growing potential, fostering a future of progress and collaboration. </p>
                             </div>
                             <div class="c_video">
                                 <a class="popup-youtube" href="https://www.youtube.com/watch?v=62QYQE6k7tg"><img src="{% static 'web_sakurafari/img/icon/video-icon.png' %}"  alt="">See how we work </a>
@@ -269,7 +270,7 @@
                         <div class="col-lg-4 col-sm-6">
                             <aside class="f_widget f_about_widget">
                                 <img src="{% static 'web_sakurafari/img/logo.png' %}"  alt="">
-                                <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
+                                <p class="justified-text">At SAKURAFARI, we bridge the gap between Japan’s cutting-edge technology and Central Africa’s emerging opportunities. With Cameroon as the strategic entry point, we identify, adapt, and integrate transformative innovations that drive sustainable growth.</p>
                             </aside>
                         </div>
                         <div class="col-lg-4 col-sm-6">
@@ -308,7 +309,7 @@
             <div class="footer_copyright">
                 <div class="container">
                     <div class="float-sm-left">
-                        <h5>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</h5>
+                        <h5>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved, SAKURAFARI</h5>
                     </div>
                     <div class="float-sm-right">
                         <ul>
