--- a/web_sakurafari/templates/contact.html
+++ b/web_sakurafari/templates/contact.html
@@ -11,6 +11,13 @@
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>SAKURAFARI</title>
 
+        <style>
+            .justified-text {
+                text-align: justify;
+                
+            }
+        </style>
+
         <!-- Icon css link -->
         <link rel="stylesheet" href="{% static 'web_sakurafari/css/font-awesome.min.css' %}">
         <!-- Bootstrap -->
@@ -159,7 +166,7 @@
                         <div class="col-lg-4 col-sm-6">
                             <aside class="f_widget f_about_widget">
                                 <img src="{% static 'web_sakurafari/img/logo.png' %}"  alt="">
-                                <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
+                                <p class="justified-text">At SAKURAFARI, we bridge the gap between Japan’s cutting-edge technology and Central Africa’s emerging opportunities. With Cameroon as the strategic entry point, we identify, adapt, and integrate transformative innovations that drive sustainable growth.</p>
                             </aside>
                         </div>
                         <div class="col-lg-4 col-sm-6">
@@ -198,7 +205,7 @@
             <div class="footer_copyright">
                 <div class="container">
                     <div class="float-sm-left">
-                        <h5>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved </h5>
+                        <h5>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved, SAKURAFARI</h5>
                     </div>
                     <div class="float-sm-right">
                         <ul>
