--- a/web_sakurafari/templates/elements.html
+++ b/web_sakurafari/templates/elements.html
@@ -330,7 +330,7 @@
                         <div class="col-lg-4 col-sm-6">
                             <aside class="f_widget f_about_widget">
                                 <img src="{% static 'web_sakurafari/img/logo.png' %}"  alt="">
-                                <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
+                                <p style="text-align: justify;">At SAKURAFARI, we bridge the gap between Japan’s cutting-edge technology and Central Africa’s emerging opportunities. With Cameroon as the strategic entry point, we identify, adapt, and integrate transformative innovations that drive sustainable growth.</p>
                             </aside>
                         </div>
                         <div class="col-lg-4 col-sm-6">
@@ -369,7 +369,7 @@
             <div class="footer_copyright">
                 <div class="container">
                     <div class="float-sm-left">
-                        <h5>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</h5>
+                        <h5>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved, SAKURAFARI</h5>
                     </div>
                     <div class="float-sm-right">
                         <ul>
