--- a/web_sakurafari/templates/home.html
+++ b/web_sakurafari/templates/home.html
@@ -11,6 +11,18 @@
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>SAKURAFARI</title>
 
+        <style>
+            .justified-text {
+                text-align: justify;
+                text-justify: inter-word;
+                margin-bottom: 10px;
+                line-height: 1.6;
+                hyphens: auto;
+                word-spacing: 0.1em;
+                max-width: 800px;
+            }
+        </style>
+
         <!-- Icon css link -->
         <link rel="stylesheet" href="{% static 'web_sakurafari/css/font-awesome.min.css' %}">
         <!-- Bootstrap -->
@@ -160,7 +172,7 @@
                             data-type="text" 
                             data-responsive_offset="on" 
                             data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]"
-                            data-textAlign="['left','left','left','left','left','center']">Cameroon: <br />The Key to Driving <br />Innovation in the Region</div>
+                            data-textAlign="['left','left','left','left','left','center']">Identifying Innovation: <br />Solar World's Cutting-Edge <br />Portable Power Stations</div>
                             
                             <div class="tp-caption tp-resizeme secand_text" 
                                 data-x="['left','left','left','left','15','center']" 
@@ -230,7 +242,7 @@
                             data-type="text" 
                             data-responsive_offset="on" 
                             data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]"
-                            data-textAlign="['left','left','left','left','left','center']">Fostering Growth <br /> Through Technology <br />and Collaboration</div>
+                            data-textAlign="['left','left','left','left','left','center']">Identifying Innovation: <br /> TOKYO8 by <br /> TAIYO YUKA</div>
                             
                             <div class="tp-caption tp-resizeme secand_text" 
                                 data-x="['left','left','left','left','15','center']" 
@@ -291,8 +303,8 @@
             <div class="container">
                 <div class="c_title">
                     <img src="{% static 'web_sakurafari/img/icon/title-icon.png' %}"  alt="">
-                    <h6>Discover the features</h6>
-                    <h2>We are young but bold</h2>
+                    <h6>Business & Technology Expansion</h6>
+                    <h2>Connecting Japan's Excellence with Central Africa's Potential</h2>
                 </div>
                 <div class="row feature_inner">
                     <div class="col-lg-4 col-sm-6">
@@ -300,8 +312,8 @@
                             <div class="f_icon">
                                 <img src="{% static 'web_sakurafari/img/icon/f-icon-1.png' %}"  alt="">
                             </div>
-                            <h4>Brand Identity</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
+                            <h4>Identifying Innovation</h4>
+                            <p class="justified-text">We scout Japan’s most advanced technologies, selecting solutions that address real challenges and drive meaningful change in Central Africa.</p>
                             <a class="more_btn" href="#">Read More</a>
                         </div>
                     </div>
@@ -310,8 +322,8 @@
                             <div class="f_icon">
                                 <img src="{% static 'web_sakurafari/img/icon/f-icon-2.png' %}"  alt="">
                             </div>
-                            <h4>Online Marketing</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
+                            <h4>Adapting for Impact</h4>
+                            <p class="justified-text">We refine and localize innovations, ensuring they seamlessly fit the region’s unique market dynamics, needs, and growth potential.</p>
                             <a class="more_btn" href="#">Read More</a>
                         </div>
                     </div>
@@ -320,8 +332,8 @@
                             <div class="f_icon">
                                 <img src="{% static 'web_sakurafari/img/icon/f-icon-3.png' %}"  alt="">
                             </div>
-                            <h4>Social Media</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
+                            <h4>Integrating for Growth</h4>
+                            <p class="justified-text">We facilitate implementation through strong partnerships, enabling transformative solutions to take root, scale, and foster sustainable development.</p>
                             <a class="more_btn" href="#">Read More</a>
                         </div>
                     </div>
@@ -335,35 +347,14 @@
             <div class="left_3d">
                 <div class="shap_slider_inner owl-carousel">
                     <div class="item">
-                        <h4>“They are the best”</h4>
-                        <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
+                        <h4>“The Architect of Change”</h4>
+                        <p class="justified-text">As an IT professional specializing in ICT4D and Data Center Operations, I am passionate about leveraging technology to create impactful solutions. Committed to bridging the gap between Cameroon and Japan, I foster technology transfer and strategic partnerships to unlock Central Africa’s potential.
+                            Through SAKURAFARI, I combine my expertise and entrepreneurial vision to drive innovation, collaboration, and sustainable growth</p>
                         <div class="media">
-                            <img src="{% static 'web_sakurafari/img/team/people/people-5.jpg' %}"  alt="">
+                            <img src="{% static 'web_sakurafari/img/team/people/founder.jpg' %}"  alt="">
                             <div class="media-body">
-                                <h5>Chriss Turner</h5>
-                                <h6>CEO Enterprise</h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h4>“They are the best”</h4>
-                        <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
-                        <div class="media">
-                            <img src="{% static 'web_sakurafari/img/team/people/people-5.jpg' %}"  alt="">
-                            <div class="media-body">
-                                <h5>Chriss Turner</h5>
-                                <h6>CEO Enterprise</h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h4>“They are the best”</h4>
-                        <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
-                        <div class="media">
-                            <img src="{% static 'web_sakurafari/img/team/people/people-5.jpg' %}"  alt="">
-                            <div class="media-body">
-                                <h5>Chriss Turner</h5>
-                                <h6>CEO Enterprise</h6>
+                                <h5>Freddy ABEME</h5>
+                                <h6>Founder</h6>
                             </div>
                         </div>
                     </div>
@@ -502,7 +493,7 @@
                         <div class="col-lg-4 col-sm-6">
                             <aside class="f_widget f_about_widget">
                                 <img src="{% static 'web_sakurafari/img/logo.png' %}"  alt="">
-                                <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
+                                <p class="justified-text">At SAKURAFARI, we bridge the gap between Japan’s cutting-edge technology and Central Africa’s emerging opportunities. With Cameroon as the strategic entry point, we identify, adapt, and integrate transformative innovations that drive sustainable growth.</p>
                             </aside>
                         </div>
                         <div class="col-lg-4 col-sm-6">
@@ -541,7 +532,7 @@
             <div class="footer_copyright">
                 <div class="container">
                     <div class="float-sm-left">
-                        <h5>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</h5>
+                        <h5>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved, SAKURAFARI</h5>
                     </div>
                     <div class="float-sm-right">
                         <ul>
